--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,25 +19,16 @@ jobs:
 
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: 'recursive'
           fetch-depth: 0
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
-      - name: Cache Gradle Build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/build-cache-*
-            ~/.gradle/buildOutputCleanup/cache.properties
-          key: gradle-builds-core-${{ github.sha }}
-          restore-keys: |
-            gradle-builds-${{ runner.os }}
       - name: ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -55,7 +46,7 @@ jobs:
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.maven_pgp_signingKey }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.maven_pgp_signingPassword }}
       - name: Upload library
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}-library
           path: ~/.m2
@@ -63,7 +54,7 @@ jobs:
   test:
     needs: build
     name: Test on API ${{ matrix.api-level }} ${{ matrix.arch }}
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -135,37 +126,36 @@ jobs:
             target: android-tv
             arch: x86
           - api-level: 32
-            target: google_apis
+            target: aosp_atd
             arch: x86_64
           - api-level: 33
-            target: google_apis
+            target: aosp_atd
+            arch: x86_64
+          - api-level: 34
+            target: aosp_atd
             arch: x86_64
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: 'recursive'
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
-      - name: Cache Gradle Build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/build-cache-*
-            ~/.gradle/buildOutputCleanup/cache.properties
-          key: gradle-builds-core-${{ github.sha }}
-          restore-keys: |
-            gradle-builds-${{ runner.os }}
       - name: ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
           key: ${{ runner.os }}-${{ github.sha }}
           restore-keys: ${{ runner.os }}
           save: false
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -183,7 +173,7 @@ jobs:
           avd-name: ${{ matrix.api-level }}_${{ matrix.arch }}
       - name: Upload outputs
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: test-outputs
+          name: ${{ matrix.api-level }}-${{ matrix.arch }}-test-outputs
           path: test/build/outputs
